--- a/template/amnhac-nghethuat.html
+++ b/template/amnhac-nghethuat.html
@@ -365,7 +365,7 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Khoá học
                             </p>
-                            <h3 class="class-title tt-36 t-uppercase f-normal f-round">
+                            <h3 class="class-title tt-36 t-uppercase f-normal f-round wow animate__bounceIn">
                                 TÌM LỚP HỌC THEO NHU CẦU
                             </h3>
                         </div>
