--- a/template/doingu-giaovien-detail.html
+++ b/template/doingu-giaovien-detail.html
@@ -364,12 +364,12 @@
                         <p class="seami-label f-dancing main-cl">
                             Đội ngũ giảng viên
                         </p>
-                        <h3 class="teacher-title tt-36 t-uppecase f-normal">
+                        <h3 class="teacher-title tt-36 t-uppecase f-normal wow animate__bounceInRight">
                             GIẢNG VIÊN ĐANG DẠY Ở SEAMI
                         </h3>
                         <div class="teacher-content">
                             <div class="columns">
-                                <div class="column teacher-ig">
+                                <div class="column teacher-ig" data-aos="fade-up">
                                     <div class="teacher-inner">
                                         <div class="teacher-avatar">
                                             <img src="./img/img-avatar-detail.png" alt="img-avatar-detail.png">
@@ -456,8 +456,6 @@
 
 
                                                         </div>
-
-
                                                     </div>
                                             </div>
                                             </form>
@@ -466,7 +464,7 @@
 
                                 </div>
 
-                                <div class="column teacher-tx">
+                                <div class="column teacher-tx" data-aos="fade-left"  data-aos-delay="300">
                                     <div class="teacher-inner">
                                         <div class="teacher-box">
                                             <h4 class="teacher-tt tt-18 f-bold">
