--- a/template/doingu-giaovien.html
+++ b/template/doingu-giaovien.html
@@ -364,7 +364,7 @@
                         <p class="seami-label f-dancing main-cl">
                             Đội ngũ giảng viên
                         </p>
-                        <h3 class="teacher-title tt-36 t-uppecase">
+                        <h3 class="teacher-title tt-36 t-uppecase wow animate__bounceInRight">
                             GIẢNG VIÊN ĐANG DẠY Ở SEAMI
                         </h3>
                         <p class="teacher-desc f-light">
@@ -375,7 +375,7 @@
                         </p>
 
                         <div class="teacher-list">
-                            <div class="teacher-item">
+                            <div class="teacher-item" data-aos="fade-up">
                                 <div class="columns">
                                     <div class="column teacher-ig">
                                         <div class="teacher-img">
@@ -426,7 +426,7 @@
 
                                 </div>
                             </div>
-                            <div class="teacher-item">
+                            <div class="teacher-item" data-aos="fade-up"  data-aos-delay="300">
                                 <div class="columns">
                                     <div class="column teacher-ig">
                                         <div class="teacher-img">
@@ -477,7 +477,7 @@
 
                                 </div>
                             </div>
-                            <div class="teacher-item">
+                            <div class="teacher-item" data-aos="fade-up"  data-aos-delay="400">
                                 <div class="columns">
                                     <div class="column teacher-ig">
                                         <div class="teacher-img">
@@ -528,7 +528,7 @@
 
                                 </div>
                             </div>
-                            <div class="teacher-item">
+                            <div class="teacher-item" data-aos="fade-up">
                                 <div class="columns">
                                     <div class="column teacher-ig">
                                         <div class="teacher-img">
@@ -579,7 +579,7 @@
 
                                 </div>
                             </div>
-                            <div class="teacher-item">
+                            <div class="teacher-item" data-aos="fade-up">
                                 <div class="columns">
                                     <div class="column teacher-ig">
                                         <div class="teacher-img">
