--- a/template/home.html
+++ b/template/home.html
@@ -478,7 +478,7 @@
                                 <p class="seami-label f-dancing main-cl">
                                     Về Seami
                                 </p>
-                                <h3 class="music-title tt-36 t-uppercase">
+                                <h3 class="music-title tt-36 t-uppercase wow animate__bounceInRight">
                                     SEAMI <br>
                                     MUSIC IN town
                                 </h3>
@@ -496,7 +496,7 @@
                             <div class="music-lbot ">
 
                                 <div class="columns">
-                                    <div class="column">
+                                    <div class="column" data-aos="fade-left">
                                         <div class="music-box">
                                             <div class="music-icon">
                                                 <img src="./img/svg/icon-teacher-w.svg" alt="icon-teacher-w.svg">
@@ -511,7 +511,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <div class="column">
+                                    <div class="column" data-aos="fade-left" data-aos-delay="400">
                                         <div class="music-box">
                                             <div class="music-icon">
                                                 <img src="./img/svg/icon-control.svg" alt="icon-control.svg">
@@ -531,7 +531,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="music-ig">
+                    <div class="music-ig" data-aos="flip-right">
                         <img src="./img/img-music.png" alt="img-music.png">
                     </div>
                 </div>
@@ -543,10 +543,10 @@
                         <p class="seami-label f-dancing f-bold main-cl">
                             Phòng học - trang thiết bị
                         </p>
-                        <h3 class="space-title t-uppercase tt-36">
+                        <h3 class="space-title t-uppercase tt-36 wow animate__bounceIn">
                             KHÔNG GIAN HỌC TẠI SEAMI
                         </h3>
-                        <div class="swiper-effect">
+                        <div class="swiper-effect" data-aos="fade-up">
                             <div class="swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
@@ -609,7 +609,7 @@
                             Kết nối Seami
                         </p>
 
-                        <h3 class="us-title tt-36 t-uppercase">
+                        <h3 class="us-title tt-36 t-uppercase wow animate__bounceIn">
                             Kết nối với chúng tôi
                         </h3>
 
@@ -636,12 +636,12 @@
 
             <section class="study-love-seami sec-80" style="background-image: url('./img/bg-study-lo.png');">
                 <div class="container">
-                    <div class="study-wrapper">
+                    <div class="study-wrapper" data-aos="fade-left">
                         <p class="seami-label f-dancing f-bold main-cl">
                             Lý do
                         </p>
 
-                        <h3 class="study-title tt-36 t-uppercase">
+                        <h3 class="study-title tt-36 t-uppercase wow animate__bounceInRight">
                             LÝ DO HỌC VIÊN YÊU THÍCH SEAMI
                         </h3>
 
@@ -652,7 +652,7 @@
                         </p>
 
                         <div class="study-list">
-                            <div class="study-item">
+                            <div class="study-item" data-aos="fade-left" data-aos-delay="300">
                                 <div class="study-icon">
                                     <img src="./img/svg/icon-people.svg" alt="icon-people.svg">
                                 </div>
@@ -664,7 +664,7 @@
                                     âm nhạc.
                                 </p>
                             </div>
-                            <div class="study-item">
+                            <div class="study-item" data-aos="fade-left" data-aos-delay="400">
                                 <div class="study-icon">
                                     <img src="./img/svg/icon-mic.svg" alt="icon-mic.svg">
                                 </div>
@@ -676,7 +676,7 @@
                                     buổi học và mỗi khóa học
                                 </p>
                             </div>
-                            <div class="study-item">
+                            <div class="study-item" data-aos="fade-left" data-aos-delay="300">
                                 <div class="study-icon">
                                     <img src="./img/svg/icon-clock.svg" alt="icon-clock.svg">
                                 </div>
@@ -688,7 +688,7 @@
                                     học viên đạt được hiệu quả tối ưu trong thời gian ngắn.
                                 </p>
                             </div>
-                            <div class="study-item">
+                            <div class="study-item" data-aos="fade-left" data-aos-delay="400">
                                 <div class="study-icon">
                                     <img src="./img/svg/icon-hom.svg" alt="icon-hom.svg">
                                 </div>
@@ -713,13 +713,13 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Video
                             </p>
-                            <h3 class="video-title tt-36 t-uppercase f-no">
+                            <h3 class="video-title tt-36 t-uppercase f-normal wow animate__bounceInRight">
                                 Cảm nhận của học viên
                             </h3>
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                        <div class="video-slide">
+                        <div class="video-slide" data-aos="fade-up">
                             <div class="swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
@@ -790,11 +790,11 @@
                         <p class="seami-label f-dancing f-bold main-cl">
                             Âm nhạc
                         </p>
-                        <h3 class="achi-title tt-36 t-uppercase">
+                        <h3 class="achi-title tt-36 t-uppercase wow animate__bounceInRight">
                             THÀNH QUẢ HỌC VIÊN
                         </h3>
 
-                        <div class="achi-sound">
+                        <div class="achi-sound" data-aos="fade-up">
                             <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
                                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1345338058&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                         </div>
