--- a/template/phonghoc-thietbi.html
+++ b/template/phonghoc-thietbi.html
@@ -365,11 +365,11 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Hình ảnh
                             </p>
-                            <h3 class="room-title tt-36 t-uppercase f-normal">
+                            <h3 class="room-title tt-36 t-uppercase f-normal wow animate__bounceIn">
                                 Không gian phòng học
                             </h3>
                         </div>
-                        <div class="room-wrap">
+                        <div class="room-wrap" data-aos="zoom-in">
                             <div class="grid popup-gallery">
                                 <div class="grid-sizer"></div>
                                 <div class="grid-item">
