--- a/template/sass/style.scss
+++ b/template/sass/style.scss
@@ -56,6 +56,7 @@
 @import './page/_gallery';
 @import './page/_hoptac-nhuongquyen';
 @import './page/_thongtin-chusohuu';
+@import './page/_lienhe';
 
 
 
