--- a/template/seami-congchung.html
+++ b/template/seami-congchung.html
@@ -370,13 +370,13 @@
                                             <p class="seami-label f-dancing f-bold main-cl">
                                                 Blog
                                             </p>
-                                            <h3 class="lic-title tt-36 t-uppercase f-normal f-round">
+                                            <h3 class="lic-title tt-36 t-uppercase f-normal f-round wow animate__bounceInRight">
                                                 Seami và công chúng
                                             </h3>
                                         </div>
                                         <div class="lic-content">
                                             <div class="columns">
-                                                <div class="column">
+                                                <div class="column" data-aos="fade-up">
                                                     <div class="lic-box">
                                                         <div class="lic-img">
                                                             <a href="#">
@@ -419,7 +419,7 @@
 
 
                                                 </div>
-                                                <div class="column">
+                                                <div class="column" data-aos="fade-up">
                                                     <div class="lic-box">
                                                         <div class="lic-img">
                                                             <a href="#">
@@ -462,7 +462,7 @@
 
 
                                                 </div>
-                                                <div class="column">
+                                                <div class="column" data-aos="fade-up">
                                                     <div class="lic-box">
                                                         <div class="lic-img">
                                                             <a href="#">
@@ -505,7 +505,7 @@
 
 
                                                 </div>
-                                                <div class="column">
+                                                <div class="column" data-aos="fade-up">
                                                     <div class="lic-box">
                                                         <div class="lic-img">
                                                             <a href="#">
@@ -548,7 +548,7 @@
 
 
                                                 </div>
-                                                <div class="column">
+                                                <div class="column" data-aos="fade-up">
                                                     <div class="lic-box">
                                                         <div class="lic-img">
                                                             <a href="#">
@@ -591,7 +591,7 @@
 
 
                                                 </div>
-                                                <div class="column">
+                                                <div class="column" data-aos="fade-up">
                                                     <div class="lic-box">
                                                         <div class="lic-img">
                                                             <a href="#">
@@ -652,7 +652,7 @@
                                     </div>
 
                                 </div>
-                                <div class="column lic-sibar">
+                                <div class="column lic-sibar" data-aos="fade-left">
                                     <div class="lic-sidebar">
                                         <div class="lic-search">
                                             <form action="#" class="search-form">
