--- a/template/seami-gallery.html
+++ b/template/seami-gallery.html
@@ -365,12 +365,12 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Hình ảnh
                             </p>
-                            <h3 class="gallery-title tt-36 t-uppercase f-normal">
+                            <h3 class="gallery-title tt-36 t-uppercase f-normal wow animate__bounceIn">
                                 Gallery
                             </h3>
                         </div>
 
-                        <div class="gallery-content" id="lightgallery">
+                        <div class="gallery-content" id="lightgallery" data-aos="zoom-in">
                             <div class="columns">
                                 <div class="column">
                                     <div class="gallery-box">
