--- a/template/thanhqua-hocvien-2.html
+++ b/template/thanhqua-hocvien-2.html
@@ -365,11 +365,11 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Video
                             </p>
-                            <h3 class="video-title tt-36 t-uppercase f-no">
+                            <h3 class="video-title tt-36 t-uppercase f-normal wow animate__bounceIn">
                                 HỌC VIÊN GUITAR BIỂU DIỄN
                             </h3>
                         </div>
-                        <div class="video-wrap">
+                        <div class="video-wrap" data-aos="fade-up">
                             <div class="columns">
                                 <div class="column">
                                     <a href="http://www.youtube.com/watch?v=PNhYz6RmIr4"
