--- a/template/thanhqua-hocvien-3.html
+++ b/template/thanhqua-hocvien-3.html
@@ -365,11 +365,11 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Cảm nhận
                             </p>
-                            <h3 class="achi-title tt-36 t-uppercase f-normal">
+                            <h3 class="achi-title tt-36 t-uppercase f-normal wow animate__bounceIn">
                                 Cảm nhận học viên
                             </h3>
                         </div>
-                        <div class="achi-wrap">
+                        <div class="achi-wrap" data-aos="fade-up">
                             <div class="columns">
                                 <div class="column">
                                     <div class="achi-box">
