--- a/template/thanhqua-hocvien.html
+++ b/template/thanhqua-hocvien.html
@@ -366,13 +366,13 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Video
                             </p>
-                            <h3 class="video-title tt-36 t-uppercase f-no">
+                            <h3 class="video-title tt-36 t-uppercase f-normal wow animate__bounceInRight">
                                 Cảm nhận của học viên
                             </h3>
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                        <div class="video-slide">
+                        <div class="video-slide" data-aos="fade-up">
                             <div class="swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
@@ -520,13 +520,13 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Video
                             </p>
-                            <h3 class="video-title tt-36 t-uppercase f-no">
+                            <h3 class="video-title tt-36 t-uppercase f-normal wow animate__bounceInRight">
                                 HỌC VIÊN GUITAR BIỂU DIỄN
                             </h3>
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                        <div class="video-slide">
+                        <div class="video-slide" data-aos="fade-up">
                             <div class="swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
@@ -673,11 +673,11 @@
                         <p class="seami-label f-dancing f-bold main-cl">
                             Âm nhạc
                         </p>
-                        <h3 class="achi-title tt-36 t-uppercase">
+                        <h3 class="achi-title tt-36 t-uppercase wow animate__bounceInRight">
                             THÀNH QUẢ HỌC VIÊN
                         </h3>
 
-                        <div class="achi-sound">
+                        <div class="achi-sound" data-aos="fade-up">
                             <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
                                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1345338058&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                         </div>
@@ -693,13 +693,13 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Video
                             </p>
-                            <h3 class="video-title tt-36 t-uppercase f-no">
+                            <h3 class="video-title tt-36 t-uppercase f-normal wow animate__bounceInRight">
                                 Cảm nhận của học viên
                             </h3>
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
-                        <div class="video-slide">
+                        <div class="video-slide" data-aos="fade-up">
                             <div class="swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
