--- a/template/thongtin-chusohuu.html
+++ b/template/thongtin-chusohuu.html
@@ -365,7 +365,7 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Thông tin
                             </p>
-                            <h3 class="web-title tt-36 t-uppercase f-normal ">
+                            <h3 class="web-title tt-36 t-uppercase f-normal wow animate__bounceIn">
                                 THÔNG TIN CHỦ SỞ HỮU WEBSITE
                             </h3>
                         </div>
