--- a/template/sass/page/__thanhqua-hocvien.scss
+++ b/template/sass/page/__thanhqua-hocvien.scss
@@ -1,5 +1,6 @@
 .achi-student{
     padding: 60px 0 100px;
+    overflow: hidden;
     @include max-media($bk-d-1200){
         padding: 60px 0;
     }
