--- a/template/seami-congchung-chitiet-2.html
+++ b/template/seami-congchung-chitiet-2.html
@@ -361,7 +361,6 @@
             <section class="seami-public seami-public-post">
                 <div class="container">
                     <div class="lic-wrapper">
-
                         <div class="lic-wrap">
                             <div class="columns">
                                 <div class="column lic-main">
@@ -555,7 +554,7 @@
                                 </div>
 
 
-                                <div class="column lic-sibar">
+                                <div class="column lic-sibar" data-aos="fade-left">
                                     <div class="lic-sidebar">
                                         <div class="lic-search">
                                             <form action="#" class="search-form">
@@ -746,12 +745,12 @@
                             <p class="seami-label f-dacing main-cl f-bold">
                                 Tin liên quan
                             </p>
-                            <h3 class="similar-title tt-40 f-normal t-uppercase mb-40 ">
+                            <h3 class="similar-title tt-40 f-normal t-uppercase mb-40 wow animate__bounceInRight">
                                 Bài viết tương tự
                             </h3>
                         </div>
 
-                        <div class="similar-content">
+                        <div class="similar-content" data-aos="fade-up">
                             <div class="swiper-custom">
                                 <div class="swiper">
                                     <div class="swiper-wrapper">
