--- a/template/seami-sukien.html
+++ b/template/seami-sukien.html
@@ -365,7 +365,7 @@
                             <p class="seami-label f-dancing f-bold main-cl">
                                 Sự kiện
                             </p>
-                            <h3 class="event-title tt-36 t-uppercase f-normal">
+                            <h3 class="event-title tt-36 t-uppercase f-normal wow animate__bounceInRight">
                                 Seami và sự kiện
                             </h3>
                         </div>
@@ -373,7 +373,7 @@
                         <div class="event-content">
 
                             <div class="event-list">
-                                <div class="event-item">
+                                <div class="event-item" data-aos="fade-up">
                                     <div class="event-ig">
                                         <a href="#">
                                             <img src="./img/img-event-1.png" alt="img-event-1.png">
@@ -410,7 +410,7 @@
 
                                     </div>
                                 </div>
-                                <div class="event-item">
+                                <div class="event-item" data-aos="fade-up">
                                     <div class="event-ig">
                                         <a href="#">
                                             <img src="./img/img-event-2.png" alt="img-event-2.png">
@@ -445,7 +445,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="event-item">
+                                <div class="event-item" data-aos="fade-up">
                                     <div class="event-ig">
                                         <a href="#">
                                             <img src="./img/img-event-3.png" alt="img-event-3.png">
@@ -480,7 +480,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="event-item">
+                                <div class="event-item" data-aos="fade-up">
                                     <div class="event-ig">
                                         <a href="#">
                                             <img src="./img/img-event-4.png" alt="img-event-4.png">
@@ -515,7 +515,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="event-item">
+                                <div class="event-item" data-aos="fade-up">
                                     <div class="event-ig">
                                         <a href="#">
                                             <img src="./img/img-event-1.png" alt="img-event-1.png">
@@ -552,7 +552,7 @@
 
                                     </div>
                                 </div>
-                                <div class="event-item">
+                                <div class="event-item" data-aos="fade-up">
                                     <div class="event-ig">
                                         <a href="#">
                                             <img src="./img/img-event-2.png" alt="img-event-2.png">
@@ -587,7 +587,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="event-item">
+                                <div class="event-item" data-aos="fade-up">
                                     <div class="event-ig">
                                         <a href="#">
                                             <img src="./img/img-event-3.png" alt="img-event-3.png">
